@@ -1,3 +1,11 @@
+2018-02-01  Greg Wolfe  <gregory.wolfe@kodakalaris.com>
+
+	* magick/attribute.c (CloneImageAttributes): Fixed a bug
+	in which the source image attributes would always replace
+	the destination image attributes instead of being appended
+	to them, and the destination image attributes would become
+	a memory leak.
+
 2018-01-31  Greg Wolfe  <gregory.wolfe@kodakalaris.com>
 
 	* coders/svg.c (SVGStartElement): Fixed a bug in which the
